--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
     "git.ignoreLimitWarning": true,
-    "cSpell.language": "en,sv"
+    "cSpell.language": "en,sv",
+    "cSpell.words": [
+        "addressen"
+    ]
 }
